--- a/courses/webdevintro.html
+++ b/courses/webdevintro.html
@@ -264,7 +264,7 @@
                         <div class="member-info">
                             <h4>Eric Zhu</h4><span>Assistant Teacher</span>
                             <div class="social">
-                                <a target="_blank" href="ericzhu105@gmail.com"><i class="fa fa-envelope"></i></a>
+                                <a target="_blank" href="mailto:ericzhu105@gmail.com"><i class="fa fa-envelope"></i></a>
                                 <a target="_blank" href="https://github.com/ericzhu105"><i class="fa fa-github"></i></a>
                             </div>
                         </div>
