--- a/courses/pythonauto.html
+++ b/courses/pythonauto.html
@@ -256,13 +256,11 @@
         <div class="col-lg-3 col-md-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="/assets/img/profilepic/ericprofilepic.png" class="img-fluid"
-                  alt="Avinash profilepic"></div>
               <div class="member-info">
-                <h4>Eric Guo</h4><span>Asistant Teacher</span>
+                <h4>Avinash Valuveri</h4><span>Asistant Teacher</span>
                 <div class="social">
-                  <a target="_blank" href="mailto:ericguo0929@gmail.com"><i class="fa fa-envelope"></i></a>
-                  <a target="_blank" href="https://github.com/EricGuo0929"><i class="fa fa-github"></i></a>
+                  <a target="_blank" href="mailto:avinashvaluveri@gmail.com"><i class="fa fa-envelope"></i></a>
+                  <a target="_blank" href="https://github.com/AvinashValuveri"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
