--- a/timesaving/footer.html
+++ b/timesaving/footer.html
@@ -19,7 +19,8 @@
               <p><b>Non-Profit EIN Number:</b></p>
               <p>ID: 81-2908499</p>
               <a id="fsalink" href="/assets/pdf/FSA.pdf" style="padding-right: 2.5%; padding-left: 2.5%;">Fiscal
-                Sponsorship Agreement PDF</a>
+                Sponsorship Agreement</a>
+
 
               <div class="social-links mt-3">
                 <a target="https://twitter.com/academiaedge" href="https://twitter.com/academiaedge" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -68,7 +69,7 @@
     </div>
     </div>
     <div class="container">
-      <div class="copyright">&copy; Copyright <strong><span> AcademiaEdge</span></strong>. All Rights Reserved</div>
+      <div class="copyright">&copy; Copyright <strong><span> AcademiaEdge</span></strong>. All Rights Reserved   | <a class="privacypolicyhover" href="/assets/pdf/Privacy Policy.pdf">Privacy Policy</a></div>
     </div>
   </footer>
 </body>
