--- a/courses.html
+++ b/courses.html
@@ -166,7 +166,7 @@
 
       <div class="coursegriditem scratch">
         <div class="member">
-          <div class="pic"><img src="\assets\img\courseimg\scratchclassimage.png" class="img-fluid" style="margin-bottom:20%;" alt="scratch image"></div>
+          <div class="pic"><img src="\assets\img\courseimg\scratchclassimage.svg" class="img-fluid" style="margin-bottom:20%;" alt="scratch image"></div>
           <div class="member-info">
             <h4>Scratch: A Basic Introduction to Programming</h4>
             <span>Lead Teachers: Eamon Mukhopadhyay and Eric Guo</span>
@@ -193,7 +193,7 @@
       <div class="coursegriditem python">
         <div class="member">
           <div class="pic">
-            <img src="assets/img/courseimg/automation.jpg" class="img-fluid" style="margin-bottom:20%;" alt="Python Automation Image">
+            <img src="assets/img/courseimg/PythonAutomationGraphic (2).svg" class="img-fluid" style="margin-bottom:20%;" alt="Python Automation Image">
           </div>
           <div class="member-info">
             <h4>Programming through Python: Automation</h4>
@@ -208,7 +208,7 @@
       <div class="coursegriditem python">
         <div class="member">
           <div class="pic">
-            <img src="assets/img/courseimg/pygame.png" class="img-fluid" style="margin-bottom:20%;" alt="Pygame image">
+            <img src="assets/img/courseimg/pygame (1).svg" class="img-fluid" style="margin-bottom:20%;" alt="Pygame image">
           </div>
           <div class="member-info">
             <h4>Programming through Python: PyGame</h4>
@@ -239,7 +239,7 @@
       <div class="coursegriditem python">
         <div class="member">
           <div class="pic">
-            <img src="assets/img/courseimg/pythondeepcourse.png" class="img-fluid" style="margin-bottom:20%;" alt="Python Deep learning image">
+            <img src="assets/img/courseimg/pythondeepcourse.svg" class="img-fluid" style="margin-bottom:20%;" alt="Python Deep learning image">
           </div>
           <div class="member-info">
             <h4>Programming through Python: Deep Learning</h4>
@@ -254,7 +254,7 @@
       <div class="coursegriditem javascript">
         <div class="member">
           <div class="pic">
-            <img src="assets/img/courseimg/javascriptcourse.png" class="img-fluid" style="margin-bottom:20%;" alt="Javascript course image">
+            <img src="assets/img/courseimg/javascriptcourse.svg" class="img-fluid" style="margin-bottom:20%;" alt="Javascript course image">
           </div>
           <div class="member-info">
             <h4>Introduction to JavaScript</h4>
@@ -268,7 +268,7 @@
       <div class="coursegriditem rust">
         <div class="member">
           <div class="pic">
-            <img src="assets/img/courseimg/r1.png" class="img-fluid" style="margin-bottom:20%;" alt="Rust introduction course image">
+            <img src="assets/img/courseimg/r1.svg" class="img-fluid" style="margin-bottom:20%;" alt="Rust introduction course image">
           </div>
           <div class="member-info">
             <h4>Introduction to Rust</h4>
@@ -284,7 +284,7 @@
       <div class="coursegriditem Java">
         <div class="member">
           <div class="pic">
-            <img src="assets/img/courseimg/javacourse.png" class="img-fluid" style="margin-bottom:20%;" alt="Java introduction image">
+            <img src="assets/img/courseimg/javacourse.svg" class="img-fluid" style="margin-bottom:20%;" alt="Java introduction image">
           </div>
           <div class="member-info">
             <h4>Introduction to Java</h4>
@@ -300,7 +300,7 @@
       <div class="coursegriditem Java">
         <div class="member">
           <div class="pic">
-            <img src="assets/img/courseimg/competitivejavacourse.jpg" class="img-fluid" style="margin-bottom:20%;" alt="Competitive java course image">
+            <img src="assets/img/courseimg/competitivejavacourse (4).svg" class="img-fluid" style="margin-bottom:20%;" alt="Competitive java course image">
           </div>
           <div class="member-info">
             <h4>Competitive Programming with Java</h4>
@@ -331,7 +331,7 @@
         <div class="member">
           <div class="pic">
             <div class="coursetag">Coming soon!</div>
-            <img src="assets/img/courseimg/c1.png" class="img-fluid" style="margin-bottom:20%;" alt="C# Introduction Image">
+            <img src="assets/img/courseimg/c1.svg" class="img-fluid" style="margin-bottom:20%;" alt="C# Introduction Image">
           </div>
           <div class="member-info">
             <h4>Introduction to C#</h4>
