Renaming Privacy Policy Pdf

--- a/timesaving/footer.html
+++ b/timesaving/footer.html
@@ -69,7 +69,7 @@
     </div>
     </div>
     <div class="container">
-      <div class="copyright">&copy; Copyright <strong><span> AcademiaEdge</span></strong>. All Rights Reserved   | <a class="privacypolicyhover" href="/assets/pdf/Privacy Policy.pdf">Privacy Policy</a></div>
+      <div class="copyright">&copy; Copyright <strong><span> AcademiaEdge</span></strong>. All Rights Reserved   | <a class="privacypolicyhover" href="/assets/pdf/Privacy_Policy.pdf">Privacy Policy</a></div>
     </div>
   </footer>
 </body>
