update Teacher Logistics PDF name

--- a/joinus.html
+++ b/joinus.html
@@ -130,7 +130,7 @@
                 <li >Pass Initial Onboarding Application</li>
               </ul>
               <div class="w3-center">
-                <a target="_blank" href="\assets\pdf\Teacher Logistics.pdf" data-aos="fade-up"><button  class="button15 w3-center" data-aos="fade-up"><span>Information Packet</span></button></a>
+                <a target="_blank" href="/assets/pdf/Teacher_Logistics.pdf" data-aos="fade-up"><button  class="button15 w3-center" data-aos="fade-up"><span>Information Packet</span></button></a>
               </div>
               <br><br>
               <div style="list-style-type: none"><img src="assets\img\joinus\teacher-1.png" class="img-fluid" alt="Maxwell profilepic"></div>
@@ -144,7 +144,7 @@
 
       <div class="w3-row">
         <div class="w3-col l7 m12 s12" data-aos="fade-right">
-          <li style="list-style-type: none"><img src="assets\img\joinus\partnership.png" class="img-fluid" alt="Maxwell profilepic"></li>
+          <li style="list-style-type: none"><img src="/assets/img/joinus/partnership.png" class="img-fluid" alt="Maxwell profilepic"></li>
         </div>
         <div class="w3-col l5 m12 s12">
           <div class="section-title">
