update pdf name for Course Logistics

--- a/courses.html
+++ b/courses.html
@@ -93,7 +93,7 @@
   <div class="bg-imagecourses">
     <div class="bg-text">
         <h1 data-aos="zoom-in">Course Selection</h1>
-        <a target="_blank" href="\assets\pdf\Course Logistics.pdf">
+        <a target="_blank" href="/assets/pdf/Course_Logistics.pdf">
           <button class="button15"  data-aos="fade-up"  data-aos-delay="100"><span>Course Logistics</span></button>
         </a>
     </div>
