Big Index.html push

--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
 
         <div class="coursegriditem" style="display:block">
           <div class="member" data-aos="zoom-in" data-aos-delay="100">
-            <div class="pic"><img src="\assets\img\courseimg\scratchclassimage.png" class="img-fluid"
-                style="margin-bottom:20%;" alt="scratch image"></div>
+            <div class="pic"><img src="assets/img/courseimg/pygame (1).svg" class="img-fluid"
+                style="margin-bottom:20%;" alt="Pygame"></div>
             <div class="member-info">
-              <h4>Scratch: A Basic Introduction to Programming</h4>
-              <span style="padding-left: 5%; padding-right: 5%;">Lead Teachers: Eamon Mukhopadhyay and Eric Guo</span>
+            <h4>Programming through Python: PyGame</h4>
+              <span style="padding-left: 5%; padding-right: 5%;">Lead Teacher: Jan Pilař</span>
               <div class="social">
-                <a href="courses/scratch.html"><button class="button button1">Learn More</button></a>
+                <a href="courses/pygame.html"><button class="button button1">Learn More</button></a>
               </div>
             </div>
           </div>
@@ -252,14 +252,14 @@
 
         <div class="coursegriditem" style="display:block">
           <div class="member" data-aos="zoom-in" data-aos-delay="100">
-            <div class="pic"><img src="assets/img/courseimg/introtopython.png" class="img-fluid"
-                style="margin-bottom:20%;" alt="Amanda profilepic"></div>
+            <div class="pic"><img src="assets/img/courseimg/javascriptcourse.svg" class="img-fluid"
+                style="margin-bottom:20%;" alt="Javascript course image"></div>
             <div class="member-info">
-              <h4>An Introduction to Python</h4>
-              <span style="padding-left: 5%; padding-right: 5%;">Lead Teachers: Eamon Mukhopadhyay and Avinash
+              <h4>Introduction to JavaScript</h4>
+              <span style="padding-left: 5%; padding-right: 5%;">Lead Teacher: Jeremi Kilimnik
                 Valuveri</span>
               <div class="social">
-                <a href="courses/pythonintro.html"><button class="button button1">Learn More</button></a>
+                <a href="courses/jsintro.html"><button class="button button1">Learn More</button></a>
               </div>
             </div>
           </div>
@@ -267,7 +267,7 @@
       </div>
     </div>
     <div class="w3-center">
-    <a href="/courses.html"><but class="button15 w3-center" data-aos="fade-up">View More</but></a>
+    <a href="/courses.html"><but class="button15 w3-center">View More</but></a>
   </div>
   </section>
   <section id="testimonials" class="testimonials" style="margin-top: -2.5%;">
