--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       </div>
     </div>
     <div class="w3-center">
-    <a href="/courses.html"><but class="button15 w3-center">View More</but></a>
+    <a href="/courses.html"><button class="button15 w3-center"><span>View More</span></button></a>
   </div>
   </section>
   <section id="testimonials" class="testimonials" style="margin-top: -2.5%;">
