Getting rid of drop down :)

--- a/timesaving/dropdown.html
+++ b/timesaving/dropdown.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,14 +11,14 @@
     <a href="/courses/scratch.html">Scratch: A Basic Intro</a>
     <a href="/courses/pythonintro.html">Intro to Python</a>
     <a href="/courses/pythonauto.html">Python: Automation</a>
-    <a href="/courses/pygame.html">Python: PyGame</a>
+    <a href="/courses/pygame.html">Python: PyGame</a>--->
     <!--<a href="/courses/pythonml.html">Python: Machine Learning</a>-->
-    <a href="/courses/pythondl.html">Python: Deep Learning</a>
-    <a href="/courses/jsintro.html">Intro to JavaScript</a>
+    <!--<a href="/courses/pythondl.html">Python: Deep Learning</a>
+    <a href="/courses/jsintro.html">Intro to JavaScript</a>-->
     <!--<a href="/courses/csharpintro.html">Intro to C#</a>
     <a href="/courses/csharpinter.html">Intermediate C#</a>
     <a href="/courses/csharpadv.html">Advanced C#</a>-->
-    <a href="/courses/rustintro.html">Intro to Rust</a>
+    <!--<a href="/courses/rustintro.html">Intro to Rust</a>
     <a href="/courses/javaintro.html">Intro to Java</a>
     <a href="/courses/javacomp.html">Competitive Java</a>
     <a href="/courses/gamedevintro.html">Intro to Game Development</a>
