--- a/team.html
+++ b/team.html
@@ -287,21 +287,6 @@
           </div>
    
           <div class="organizer python">
-            <div class="profileclass" >
-              <div class="member">
-                <div class="pic"><img src="assets/img/profilepic/michaelprofilepic.png" class="img-fluid" alt="Stanley profile pic"></div>
-                <div class="member-info">
-                  <h4>Michael Steinberg</h4><span>Python Teacher</span>
-                  <div class="social">
-                    <a target="_blank" href="mailto:Steinberg.mi@northeastern.edu"><i class="fa fa-envelope"></i></a>
-                    <a target="_blank" href="https://github.com/Mikesteinberg"><i class="fa fa-github"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-   
-          <div class="organizer python">
             <div class="profileclass">
               <div class="member">
                 <div class="pic"><img src="assets/img/profilepic/janprofilepic.png" class="img-fluid" alt="Jan profile pic"></div>
@@ -310,6 +295,20 @@
                   <div class="social">
                     <a target="_blank" href="mailto:janpilar13@gmail.com"><i class="fa fa-envelope"></i></a>
                     <a target="_blank"  href="https://github.com/RenegadeLeaf4"><i class="fa fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="organizer python java">
+            <div class="profileclass">
+              <div class="member">
+                <div class="pic"><img src="assets/img/profilepic/estrellaprofilepic.jpeg" class="img-fluid" alt="Jan profile pic"></div>
+                <div class="member-info">
+                  <h4>Estrella Popoca</h4><span>Python and Java Teacher</span>
+                  <div class="social">
+                    <a target="_blank" href="mailto:elliepopoca@gmail.com"><i class="fa fa-envelope"></i></a>
                   </div>
                 </div>
               </div>
@@ -340,6 +339,20 @@
                   <div class="social">
                     <a target="_blank" href="mailto:shivarasul@gmail.com"><i class="fa fa-envelope"></i></a>
                     <a target="_blank"  href="https://github.com/Agnimandur"><i class="fa fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="organizer Java">
+            <div class="profileclass">
+              <div class="member">
+                <div class="pic"><img src="assets/img/profilepic/aryaanprofilepic.png" class="img-fluid" alt="shiva profile pic"></div>
+                <div class="member-info">
+                  <h4>Aryaan Singh</h4><span>Java Teacher</span>
+                  <div class="social">
+                    <a target="_blank" href="mailto:aryaans13@gmail.com"><i class="fa fa-envelope"></i></a>
                   </div>
                 </div>
               </div>
