--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -237,7 +237,7 @@
       </div>
       <div class="row" data-aos="fade-left">
 
-        <div class="col-lg-3 col-md-6 ">
+        <div class="col-lg-3 col-sm-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="/assets/img/profilepic/avinashprofilepic.png" class="img-fluid"
@@ -253,7 +253,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 ">
+        <div class="col-lg-3 col-sm-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="/assets/img/profilepic/eamonprofilepic.png" class="img-fluid"
@@ -269,13 +269,13 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 ">
+        <div class="col-lg-3 col-sm-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="/assets/img/profilepic/raghavprofilepic.png" class="img-fluid"
                   alt="Raghav profilepic"></div>
               <div class="member-info">
-                <h4>Raghav Sriram</h4><span>Lead Teacher</span>
+                <h4>Raghav Sriram</h4><span>Contributor</span>
                 <div class="social">
                   <a target="_blank" href="mailto:avinashvaluveri@gmail.com"><i class="fa fa-envelope"></i></a>
                   <a target="_blank" href="https://github.com/AvinashValuveri"><i class="fa fa-github"></i></a>
