--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -272,6 +272,21 @@
         <div class="col-lg-3 col-sm-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="/assets/img/profilepic/estrellaprofilepic.jpeg" class="img-fluid"
+                  alt="Eamon profilepic"></div>
+              <div class="member-info">
+                <h4>Estrella Popoca</h4><span>Lead Teacher</span>
+                <div class="social">
+                  <a target="_blank" href="mailto:elliepopoca@gmail.com"><i class="fa fa-envelope"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 ">
+          <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="/assets/img/profilepic/raghavprofilepic.png" class="img-fluid"
                   alt="Raghav profilepic"></div>
               <div class="member-info">
