--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="count-box">
             <i class="icofont-simple-smile"></i>
-            <span style="display: inline-flex; align-items: center;"><span data-toggle="counter-up">125</span>+</span>
+            <span style="display: inline-flex; align-items: center;"><span data-toggle="counter-up">225</span>+</span>
             <p>Students</p>
           </div>
         </div>
@@ -267,7 +267,7 @@
       </div>
     </div>
     <div class="w3-center">
-    <a href="/courses.html"><button class="button15 w3-center"><span>View More</span></button></a>
+    <a href="/courses.html"><button class="button15 w3-center"><span>View 10+</span></button></a>
   </div>
   </section>
   <section id="testimonials" class="testimonials" style="margin-top: -2.5%;">
