--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -154,19 +154,21 @@
         Breakdown</div>
       <div style="display:grid;grid-template-columns: 1fr 1fr;">
         <div>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Wedensday</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">4/14/21-7/7/21</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">13 Weeks</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">6:00-7:00PM EST</p>
+          <p class="w3-light-grey w3-padding-16" style="height:100%;margin-bottom:0px;color:#444444 !important;">Estrella Popoca
+          </p>
+        </div>
+        <div>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Saturday</p>
           <p class="w3-padding-16" style="border-bottom:1px solid #ddd;margin-bottom:0px;">2/20/21 - 5/15/21</p>
           <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">13 Weeks</p>
           <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16"
             style='background-color:pink'>2:00-3:00PM EST</p>
           <p style="margin-bottom:0px;color:#444444 !important;padding-left:25px;padding-right:25px;"
             class="w3-padding-16 w3-light-grey">Avinash Valuveri and Eamon Mukhopadyay</p>
-        </div>
-        <div>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">4/14/21-7/7/21</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">13 Weeks</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">6:00-7:00PM EST</p>
-          <p class="w3-light-grey w3-padding-16" style="height:100%;margin-bottom:0px;color:#444444 !important;">Estrella Popoca
-          </p>
         </div>
       </div>
     </div>
