--- a/courses.html
+++ b/courses.html
@@ -126,7 +126,7 @@
 
       <div class="section-titlebtnbelow" data-aos="fade-right">
         <h2>Courses</h2>
-        <p>Our Classes</p>
+        <p>Our Computer Science Classes</p>
       </div>
 
       <div id="myBtnContainercourses" data-aos="fade-up"  data-aos-delay="1000">
