--- a/courses.html
+++ b/courses.html
@@ -345,7 +345,7 @@
             </div>
             <div class="member-info">
               <h4>Introduction to Game Development</h4>
-              <div class="social" style="visibility: hidden;>
+              <div class="social" style="visibility: hidden;">
                 <a target="_blank" href="https://forms.gle/sLNKC8Rg33mCfwpy7"><button
                     class="button button1">Waitlist</button>
                 </a>
@@ -362,7 +362,7 @@
             </div>
             <div class="member-info">
               <h4>Introduction to C#</h4>
-              <div style="visibility: hidden; class="social">
+              <div style="visibility: hidden;" class="social">
                 <a target="https://forms.gle/SMCvEJ9Yvxb3Qe8K7" href="https://forms.gle/SMCvEJ9Yvxb3Qe8K7"><button
                     class="button button1">Waitlist</button></a>
               </div>
