update estrella, add yinuo

--- a/courses/javaintro.html
+++ b/courses/javaintro.html
@@ -144,7 +144,7 @@
       <div class="w3-padding-16"
         style="grid-area:header; background-color:#4a9cff; color: white; font-size: 32px; font-weight: 600;">Quick
         Breakdown</div>
-      <div style="display:grid;grid-template-columns: 1fr 1fr 1fr;">
+      <div style="display:grid;grid-template-columns: 1fr 1fr;">
         <div>
           <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Sunday</p>
           <p class="w3-padding-16" style="border-bottom:1px solid #ddd;margin-bottom:0px;">3/14/21 - 6/8/21</p>
@@ -153,15 +153,6 @@
             style='background-color:pink'>4:00-5:00PM EST</p>
           <p style="margin-bottom:0px;height:100%;color:#444444 !important;padding-left:25px;padding-right:25px;"
             class="w3-padding-16 w3-light-grey">Aryaan Singh</p>
-        </div>
-        <div>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Monday</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">4/12/21-7/5/21</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">13 Weeks</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">7:00-8:00PM EST</p>
-          <p class="w3-light-grey w3-padding-16" style="height:100%;margin-bottom:0px;color:#444444 !important;">
-            Estrella Popoca
-          </p>
         </div>
         <div>
           <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Friday</p>
@@ -197,15 +188,6 @@
             <div class="cell" data-title="Duration">13 Weeks</div>
             <div class="cell" data-title="Time (EST)">4:00 - 5:00 PM</div>
             <div class="cell" data-title="Lead Teacher">Aryaan Singh</div>
-          </div>
-
-          <div class="hasMultipleClasses row1">
-            <div class="cell" data-title="Every">Monday</div>
-            <div class="cell" data-title="Starts">April 12<sup>th</sup>, 2021</div>
-            <div class="cell" data-title="Ends">July 5<sup>th</sup>, 2021</div>
-            <div class="cell" data-title="Duration">13 Weeks</div>
-            <div class="cell" data-title="Time (EST)">7:00 - 8:00 PM</div>
-            <div class="cell" data-title="Lead Teacher">Estrella Popoca</div>
           </div>
 
           <div class="hasMultipleClasses row1">
@@ -328,21 +310,6 @@
                 <h4>Aryaan Singh</h4><span>Lead Teacher</span>
                 <div class="social">
                   <a target="_blank" href="mailto:aryaans13@gmail.com"><i class="fa fa-envelope"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 ">
-          <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="/assets/img/profilepic/estrellaprofilepic.jpeg" class="img-fluid"
-                  alt="Estrella profilepic"></div>
-              <div class="member-info">
-                <h4>Estrella Popoca</h4><span>Lead Teacher</span>
-                <div class="social">
-                  <a target="_blank" href="mailto:elliepopoca@gmail.com"><i class="fa fa-envelope"></i></a>
                 </div>
               </div>
             </div>
