--- a/team.html
+++ b/team.html
@@ -301,12 +301,12 @@
             </div>
           </div>
 
-          <div class="organizer python java">
+          <div class="organizer python">
             <div class="profileclass">
               <div class="member">
                 <div class="pic"><img src="assets/img/profilepic/estrellaprofilepic.jpeg" class="img-fluid" alt="Jan profile pic"></div>
                 <div class="member-info">
-                  <h4>Estrella Popoca</h4><span>Python and Java Teacher</span>
+                  <h4>Estrella Popoca</h4><span>Python Teacher</span>
                   <div class="social">
                     <a target="_blank" href="mailto:elliepopoca@gmail.com"><i class="fa fa-envelope"></i></a>
                   </div>
@@ -358,6 +358,21 @@
               </div>
             </div>
           </div>
+
+          <div class="organizer javascript">
+            <div class="profileclass">
+              <div class="member">
+                <div class="pic"><img src="assets/img/profilepic/yinuoprofilepic.png" class="img-fluid" alt="Yinuo profile pic"></div>
+                <div class="member-info">
+                  <h4>Yinuo Huang</h4><span>Javascript Teacher</span>
+                  <div class="social">
+                    <a target="_blank" href="mailto:derek070211@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a target="_blank"  href="https://github.com/SnowballSH"><i class="fa fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
     
         </div>
       </div>
@@ -380,7 +395,7 @@
           <img data-aos="fade-right"  src="/assets/img/nexedgeinnovationsquicklook.png" class="img-fluid-company" style="border-radius: 25px;" alt="NexEdge Innovations">
         </div>
         <div class="col-xl-7 col-lg-6 icon-boxes2 d-flex flex-column align-items-stretch justify-content-center teambox">
-          <h2 class="joinusheader" style="text-align:left; margin-top: -2.5%;">NexEdge Innovations</h2>
+          <h2 class="joinusheader" style="text-align:left;">NexEdge Innovations</h2>
           <p>NexEdge Innovations is a multi-conglomerate company composed of a team of students based in Indiana.  We aspire to help other high school students by creating a platform where they can share their opinion, ideas, and views on global issues, all while giving advice to students and inspiring them to learn and teach others.
           </p>
           <div class="text-center text-lg-center">
@@ -398,7 +413,7 @@
           <img data-aos="fade-right"  src="/assets/img/voicesofcarmelquicklook.png" class="img-fluid-company" style="border-radius: 25px" alt="NexEdge Innovations">
         </div>
         <div class="col-xl-7 col-lg-6 icon-boxes2 d-flex flex-column align-items-stretch justify-content-center teambox">
-          <h2 class="joinusheader" style="text-align:left; margin-top: -2.5%;">Voices of Carmel</h2>  
+          <h2 class="joinusheader" style="text-align:left;">Voices of Carmel</h2>  
           <p>With the current events unfolding, it becomes increasingly difficult to voice your opinion. Voices of Carmel aims to solve just that. On this blog, all citizens of Carmel can suggest changes that will provide help to this city and share opinions on a safe space. If you have anything that you want to say about the city, please post it here and we will help you share your opinion.
           </p>
           <div class="text-center text-lg-center">
