--- a/courses/jsintro.html
+++ b/courses/jsintro.html
@@ -41,9 +41,10 @@
     #footer .footer-top .footer-links ul li:nth-child(2) {
       color: #4be8b0;
     }
-    #getnavactive > a:nth-child(8) {
-      background-color:#f1f1f1;
-      color:#1acc8d!important;
+
+    #getnavactive>a:nth-child(8) {
+      background-color: #f1f1f1;
+      color: #1acc8d !important;
     }
   </style>
   <!-- js for using same nav and footer code-->
@@ -118,56 +119,80 @@
     <p>Course Schedule</p>
   </div>
   <!--what mobile screen see-->
+  <!--the code is very ugly lol i don't expect this to be in place for a long time, this is to act as something we can use temporarily-->
   <div class="container">
-    <ul class="w3-ul w3-white w3-center breakdown" data-aos="fade-left">
-      <li class=" w3-padding-16" style="background-color:#4a9cff; color: white; font-size: 32px; font-weight: 600;">
-        Quick Breakdown</li>
-      <li class="w3-padding-16">Every Saturday</li>
-      <li class="w3-padding-16">Starts February 20<sup>th</sup>, 2021</li>
-      <li class="w3-padding-16">Ends May 22<sup>nd</sup>, 2021</li>
-      <li class="w3-padding-16">14 Weeks</li>
-      <li class="w3-padding-16">Time (EST): 5:00 - 6:00 PM</li>
-      <li class="w3-padding-16">Lead Teacher: Jeremi Kilimnik</li>
-      <li class="w3-light-grey">
-        <a target="_blank" href="https://forms.gle/WyXJaKnq3t9R7MfR6">
-          <button class="coursebutton">Enroll Now!</button>
-        </a>
-      </li>
-    </ul>
+    <div class="breakdown w3-center">
+      <div class="w3-padding-16"
+        style="grid-area:header; background-color:#4a9cff; color: white; font-size: 32px; font-weight: 600;">Quick
+        Breakdown</div>
+      <div style="display:grid;grid-template-columns: 1fr 1fr;">
+
+        <div>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Thursday</p>
+          <p class="w3-padding-16" style="border-bottom:1px solid #ddd;margin-bottom:0px;">5/20/21 - 8/12/21</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">12 Weeks</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16"
+            style='background-color:pink'>8:00-9:00PM EST</p>
+          <p style="margin-bottom:0px;color:#444444 !important;padding-left:25px;padding-right:25px;"
+            class="w3-padding-16 w3-light-grey">Yinuo Huang</p>
+        </div>
+        <div>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Saturday</p>
+          <p class="w3-padding-16" style="border-bottom:1px solid #ddd;margin-bottom:0px;">2/20/21 - 5/22/21</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">14 Weeks</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16"
+            style='background-color:pink'>5:00-6:00PM EST</p>
+          <p style="margin-bottom:0px;height:100%;color:#444444 !important;padding-left:25px;padding-right:25px;"
+            class="w3-padding-16 w3-light-grey">Jeremi Kilimnik</p>
+        </div>
+      </div>
+    </div>
   </div>
+
   <!--what computers see-->
   <div class="limiter1" data-aos="fade-up" style="margin-bottom: 3%;">
     <div class="container1-table100">
       <div class="wrap-table100">
         <div class="table1">
 
-          <div class="row1 header" style="font-weight: 600;">
+          <div class="row1  hasMultipleClasses header" style="font-weight: 600;">
             <div class="cell">Every</div>
             <div class="cell">Starts</div>
             <div class="cell">Ends</div>
             <div class="cell">Duration</div>
             <div class="cell">Time (EST)</div>
             <div class="cell">Lead Teacher</div>
-            <div class="cell">Register</div>
           </div>
 
-          <div class="row1">
+          <div class="hasMultipleClasses row1">
+            <div class="cell" data-title="Every">Thursday</div>
+            <div class="cell" data-title="Starts">May 20<sup>th</sup>, 2021</div>
+            <div class="cell" data-title="Ends">August 12<sup>th</sup>, 2021</div>
+            <div class="cell" data-title="Duration">12 Weeks</div>
+            <div class="cell" data-title="Time (EST)">8:00 - 9:00 PM</div>
+            <div class="cell" data-title="Lead Teacher">Yinuo Huang</div>
+          </div>
+
+          <div class="hasMultipleClasses row1">
             <div class="cell" data-title="Every">Saturday</div>
-            <div class="cell" data-title="Starts">February 20<sup>th</sup>, 2021 </div>
-            <div class="cell" data-title="Ends">May 22<sup>nd</sup>, 2021 </div>
+            <div class="cell" data-title="Starts">February 20<sup>th</sup>, 2021</div>
+            <div class="cell" data-title="Ends">May 22<sup>th</sup>, 2021</div>
             <div class="cell" data-title="Duration">14 Weeks</div>
             <div class="cell" data-title="Time (EST)">5:00 - 6:00 PM</div>
             <div class="cell" data-title="Lead Teacher">Jeremi Kilimnik</div>
-            <div class="cell" data-title="Register">
-              <a target="_blank" href="https://forms.gle/WyXJaKnq3t9R7MfR6">
-                <button class="coursebutton">Enroll Now!</button>
-              </a>
-            </div>
           </div>
+
         </div>
       </div>
     </div>
   </div>
+
+  <div data-aos="fade-left" style="margin-bottom:40px;margin-top:20px">
+    <button style="position:relative;left:50%;transform:translateX(-50%);" class="coursebutton">
+      <a target="_blank" href="https://forms.gle/WyXJaKnq3t9R7MfR6">Enroll Now!</a>
+    </button>
+  </div>
+
   <div class="container">
     <div class="w3-row">
       <div class="w3-col l7"
@@ -224,8 +249,9 @@
         <br><br><br>
         <div class="w3-ul w3-white w3-center coursehelp" data-aos="fade-left">
           <img src="/assets/img/Gift.png">
-          <p>Don't have the resources to sign up for a course? Reach out to <a target="_blank" href="mailto:contact@academiaedge.com"
-              style="color: #4a9cff;">contact@academiaedge.com</a> and we will try our best to help. AcademiaEdge
+          <p>Don't have the resources to sign up for a course? Reach out to <a target="_blank"
+              href="mailto:contact@academiaedge.com" style="color: #4a9cff;">contact@academiaedge.com</a> and we will
+            try our best to help. AcademiaEdge
             pledges to fight against Nation-Wide Income Inequality.</p>
         </div>
       </div>
@@ -257,6 +283,22 @@
         <div class="col-lg-3 col-md-6 ">
           <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="/assets/img/profilepic/yinuoprofilepic.png" class="img-fluid"
+                  alt="Yinuo profilepic"></div>
+              <div class="member-info">
+                <h4>Yinuo Huang</h4><span> Teacher</span>
+                <div class="social">
+                  <a target="_blank" href="mailto:derek070211@gmail.com"><i class="fa fa-envelope"></i></a>
+                  <a target="_blank" href="https://github.com/SnowballSH"><i class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 ">
+          <div class="about-content mt-50 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay="0.5s">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="/assets/img/profilepic/maxwellprofilepic.png" class="img-fluid"
                   alt="Maxwell profilepic"></div>
               <div class="member-info">
@@ -269,6 +311,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
 
