--- a/team.html
+++ b/team.html
@@ -228,6 +228,21 @@
             </div>
           </div>
 
+          <div class="organizer admin webdev">
+            <div class="profileclass">
+              <div class="member">
+                <div class="pic"><img src="assets/img/profilepic/needtoadd.png" class="img-fluid" alt="Colin profile pic"></div>
+                <div class="member-info">
+                  <h4>Colin Wolfe</h4><span>Head of Technology</span>
+                  <div class="social">
+                    <a target="_blank" href="mailto:coho905@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a target="_blank" href="https://github.com/coho905"><i class="fa fa-github"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <div class="organizer marketing python">
             <div class="profileclass">
               <div class="member">
