add profile picttures for thomas and colin

--- a/team.html
+++ b/team.html
@@ -231,7 +231,7 @@
           <div class="organizer admin webdev">
             <div class="profileclass">
               <div class="member">
-                <div class="pic"><img src="assets/img/profilepic/needtoadd.png" class="img-fluid" alt="Colin profile pic"></div>
+                <div class="pic"><img src="assets/img/profilepic/colinwolfeprofilepic.png" class="img-fluid" alt="Colin profile pic"></div>
                 <div class="member-info">
                   <h4>Colin Wolfe</h4><span>Head of Technology</span>
                   <div class="social">
@@ -242,6 +242,22 @@
               </div>
             </div>
           </div>
+
+          <div class="organizer admin webdev">
+            <div class="profileclass">
+              <div class="member">
+                <div class="pic"><img src="assets/img/profilepic/thomasprofilepic.jpeg" class="img-fluid" alt="Colin profile pic"></div>
+                <div class="member-info">
+                  <h4>Thomas Guzman</h4><span>Head of Courses</span>
+                  <div class="social">
+                    <a target="_blank" href="mailto:thomasguzman@gmail.com"><i class="fa fa-envelope"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           
           <div class="organizer marketing python">
             <div class="profileclass">
