Updated Intro to JavaScript Syllabus and Changed position of Enroll BUttons

--- a/courses/javaintro.html
+++ b/courses/javaintro.html
@@ -209,7 +209,7 @@
     </div>
   </div>
 
-  <div data-aos="fade-left" style="margin-bottom:40px;margin-top:20px">
+  <div data-aos="fade-left" style="margin-bottom:40px; margin-top: -1%;">
     <button style="position:relative;left:50%;transform:translateX(-50%);" class="coursebutton">
       <a target="_blank" href="https://forms.gle/m4BLr62TBYwVq2Tr6">Enroll Now!</a>
     </button>
