--- a/courses/jsintro.html
+++ b/courses/jsintro.html
@@ -187,7 +187,7 @@
     </div>
   </div>
 
-  <div data-aos="fade-left" style="margin-bottom:40px;margin-top:20px">
+  <div data-aos="fade-left" style="margin-bottom:40px; margin-top: -1%;">
     <button style="position:relative;left:50%;transform:translateX(-50%);" class="coursebutton">
       <a target="_blank" href="https://forms.gle/WyXJaKnq3t9R7MfR6">Enroll Now!</a>
     </button>
@@ -241,7 +241,7 @@
           <li class="w3-padding-16"><b>1</b> Project</li>
           <li class="w3-padding-16"><b>10-15</b> Students per Class</li>
           <li class="w3-light-grey">
-            <a target="_blank" href="/assets/pdf/Intro_to_Javascript_Syllabus.pdf">
+            <a target="_blank" href="/assets/pdf/Introduction to JavaScript.pdf">
               <button class="coursebutton">Course Curriculum and Syllabus</button>
             </a>
           </li>
