--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -215,8 +215,8 @@
       </div>
     </div>
   </div>
-
-  <div data-aos="fade-left" style="margin-bottom:40px;margin-top:20px">
+  
+  <div data-aos="fade-left" style="margin-bottom:40px; margin-top: -1%;">
     <button style="position:relative;left:50%;transform:translateX(-50%);" class="coursebutton">
       <a target="_blank" href="https://forms.gle/PiRGjL44YJm3yfuq8">Enroll Now!</a>
     </button>
