--- a/team.html
+++ b/team.html
@@ -250,7 +250,7 @@
                 <div class="member-info">
                   <h4>Thomas Guzman</h4><span>Head of Courses</span>
                   <div class="social">
-                    <a target="_blank" href="mailto:thomasguzman@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a target="_blank" href="mailto:thomaseguzman@gmail.com"><i class="fa fa-envelope"></i></a>
                   </div>
                 </div>
               </div>
