Update Sabri Hamza's details

--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -189,12 +189,12 @@
           </div>
 
           <div class="row1 hasMultipleClasses">
-            <div class="cell" data-title="Every">Wedensday</div>
-            <div class="cell" data-title="Starts">April 14<sup>th</sup>, 2021</div>
-            <div class="cell" data-title="Ends">July 7<sup>th</sup>, 2021</div>
-            <div class="cell" data-title="Duration">13 Weeks</div>
-            <div class="cell" data-title="Time (EST)">6:00 - 7:00 PM</div>
-            <div class="cell" data-title="Lead Teachers">Estrella Popoca</div>
+            <div class="cell" data-title="Every">Saturday</div>
+            <div class="cell" data-title="Starts">June 5<sup>th</sup>, 2021</div>
+            <div class="cell" data-title="Ends">August 28<sup>th</sup>, 2021</div>
+            <div class="cell" data-title="Duration">14 Weeks</div>
+            <div class="cell" data-title="Time (EST)">10 - 11 AM</div>
+            <div class="cell" data-title="Lead Teachers">Sabri Hamza</div>
             <!--<div class="cell" data-title="Register">
               <a target="_blank" href="https://forms.gle/PiRGjL44YJm3yfuq8">
                 <button class="coursebutton">Enroll Now!</button>
