Updated Sabri Hamza's details on mobile and computer

--- a/courses/pythonintro.html
+++ b/courses/pythonintro.html
@@ -154,11 +154,11 @@
         Breakdown</div>
       <div style="display:grid;grid-template-columns: 1fr 1fr;">
         <div>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Wedensday</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">4/14/21-7/7/21</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">13 Weeks</p>
-          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">6:00-7:00PM EST</p>
-          <p class="w3-light-grey w3-padding-16" style="height:100%;margin-bottom:0px;color:#444444 !important;">Estrella Popoca
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">Saturday</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">6/5/21-8/28/21</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">14 Weeks</p>
+          <p style="border-bottom:1px solid #ddd;margin-bottom:0px;" class="w3-padding-16">10:00 - 11:00 AM EST</p>
+          <p class="w3-light-grey w3-padding-16" style="height:100%;margin-bottom:0px;color:#444444 !important;">Sabri Hamza
           </p>
         </div>
         <div>
@@ -193,7 +193,7 @@
             <div class="cell" data-title="Starts">June 5<sup>th</sup>, 2021</div>
             <div class="cell" data-title="Ends">August 28<sup>th</sup>, 2021</div>
             <div class="cell" data-title="Duration">14 Weeks</div>
-            <div class="cell" data-title="Time (EST)">10 - 11 AM</div>
+            <div class="cell" data-title="Time (EST)">10:00 - 11:00 AM</div>
             <div class="cell" data-title="Lead Teachers">Sabri Hamza</div>
             <!--<div class="cell" data-title="Register">
               <a target="_blank" href="https://forms.gle/PiRGjL44YJm3yfuq8">
